# Algo

./: .gitignore  README.md
.ccls-cache/@@home@zayafa@workspace@Algo@/: @home@zayafa@.emacs.d@vendor@ccls@Release@clang+llvm-6.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@6.0.1@include@__stddef_max_align_t.h.blob  @home@zayafa@.emacs.d@vendor@ccls@Release@clang+llvm-6.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@6.0.1@include@float.h.blob  @home@zayafa@.emacs.d@vendor@ccls@Release@clang+llvm-6.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@6.0.1@include@stdarg.h.blob  @home@zayafa@.emacs.d@vendor@ccls@Release@clang+llvm-6.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@6.0.1@include@stddef.h.blob  @home@zayafa@.emacs.d@vendor@ccls@Release@clang+llvm-6.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@6.0.1@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@7@algorithm.blob  @usr@include@c++@7@array.blob  @usr@include@c++@7@backward@auto_ptr.h.blob  @usr@include@c++@7@backward@binders.h.blob  @usr@include@c++@7@bits@algorithmfwd.h.blob  @usr@include@c++@7@bits@alloc_traits.h.blob  @usr@include@c++@7@bits@allocated_ptr.h.blob  @usr@include@c++@7@bits@allocator.h.blob  @usr@include@c++@7@bits@atomic_base.h.blob  @usr@include@c++@7@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@7@bits@basic_ios.h.blob  (+278 more)
src/: CMakeLists.txt
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
test/search/: test_search.cpp
(+344 files in other folders)
